[tool.poetry]
name = "logistic"
version = "0.1.0"
description = ""
authors = ["easai <aksarih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
pandas = "^2.3.2"
jupyter = "^1.1.1"
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
